Update README and bep.ipynb

--- a/bep.ipynb
+++ b/bep.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Computer setup\n",
     "\n",
-    "Here’s a step-by-step guide for ensuring the proper setup across Windows and macOS:\n",
+    "Here’s a step-by-step guide for ensuring the proper setup across Windows and macOS (for macOS use `python3` not `python` in your commands):\n",
     "\n",
     "---\n",
     "\n",
